--- a/inference.ipynb
+++ b/inference.ipynb
@@ -34,13 +34,7 @@
     "# from pgmpy.estimators import BDeuScore, BDsScore, BicScore, K2Score\n",
     "\n",
     "import myUtils\n",
-    "from myUtils import *\n",
-    "\n",
-    "\n",
-    "# disable warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "random.seed(0)\n",
-    "np.random.seed(0)"
+    "from myUtils import *\n"
    ]
   },
   {
@@ -64,7 +58,7 @@
     "        model_y=LinearRegression(),\n",
     "        model_t=LinearRegression(),\n",
     "        # featurizer=PolynomialFeatures(degree=1, include_bias=False),\n",
-    "        random_state=0)\n",
+    "        )\n",
     "    est.fit(Y, T, X=X)\n",
     "    ate = est.ate(X=ref_df[X_cols], T0=T0, T1=T1)\n",
     "\n",
